# chessAPP

chess_app/: Cargo.toml  README.md  download_assets.sh  types.rs
chess_app/chess_app/src/assets/: mod.rs
chess_app/chess_app/src/gui/: mod.rs
chess_app/chess_app/src/state/: mod.rs
chess_app/src/: board.rs  lib.rs  main.rs  types.rs
chess_app/src/ai/: mod.rs
chess_app/src/assets/: mod.rs
chess_app/src/gui/: mod.rs
chess_app/src/rules/: mod.rs
chess_app/src/scripts/: create_placeholder_pieces.sh
chess_app/src/state/: mod.rs
